--- a/Proyecto/assets/css/preguntaAcciones.css
+++ b/Proyecto/assets/css/preguntaAcciones.css
@@ -1,3 +1,19 @@
+@font-face {
+    /*Fuente del tipo de letra regular*/
+    font-family: Mulish-Regular;
+    src: url("../fonts/Mulish/static/Mulish-Regular.ttf");
+}
+
+@font-face {
+    font-family: Mulish-Bold;
+    src: url("../fonts/Mulish/static/Mulish-Bold.ttf");
+    font-weight: bold;
+}
+
+strong{
+    font-family: Mulish-Bold;
+}
+
 * {
     padding: 0;
     margin: 0;
