--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -511,6 +511,8 @@ body {
 .users-list {
     overflow-y: auto;
     flex-grow: 1;
+    height: calc(100% - 53px);
+    max-height: calc(100vh - 153px);
 }
 
 .user-item {
@@ -536,22 +538,40 @@ body {
 .user-avatar {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    margin-right: 12px;
     overflow: hidden;
+    border-radius: 50%;
+    flex-shrink: 0; /* Evita que el avatar se encoja */
 }
 
 .user-avatar img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 50%;
+}
+
+.publicacion {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.publicacion .texto {
+    margin-left: 10px;
+}
+
+.publicacion .texto p {
+    margin: 0;
 }
 
 /* Chat area */
 .chat-area {
-    flex-grow: 1;
+    flex: 0 0 87%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    min-width: 0;
+    max-width: 87%;
 }
 
 .chat-header {
@@ -576,6 +596,10 @@ body {
     padding: 16px;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 100%; /* Ensure it doesn't exceed the width of its parent */
+    box-sizing: border-box;
+    min-width: 0;
 }
 
 .message {
@@ -585,6 +609,7 @@ body {
     border-radius: 18px;
     font-size: 14px;
     line-height: 1.4;
+    overflow-wrap: break-word;
 }
 
 .message.received {
