--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -61,14 +61,32 @@ body {
     right: 10px;
 }
 
-#btnLupa {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+#filtroMenu {
+    position: absolute;
+    top: 40px; /* Ajusta según la posición deseada */
+    right: 0;
+    background-color: white; /* Fondo negro */
+    border: none; /* Borde gris oscuro */
+    border-radius: 10px; /* Esquinas redondeadas */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); /* Sombra más intensa */
+    padding: 10px;
+    z-index: 1000;
 }
 
-#btnLupa:hover {
-    background-color: #EAFBFF;
+#filtroMenu label {
+    display: block; /* Cada opción en una línea separada */
+    margin: 5px 0; /* Espaciado entre opciones */
+    color: #1A1A1A; /* Color de texto blanco */
+}
+
+#filtroMenu input {
+    margin-right: 5px; /* Espacio entre el checkbox y el texto */
+    accent-color: #4DBAD9;
+}
+
+/* Opcional: Cambiar el color del texto al pasar el mouse */
+#filtroMenu label:hover {
+    color: #4DBAD9; /* Cambiar a un color azul al pasar el mouse */
 }
 
 #btnFiltro {
@@ -80,6 +98,19 @@ body {
 #btnFiltro:hover {
     background-color: #EAFBFF;
 }
+
+
+
+#btnLupa {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+#btnLupa:hover {
+    background-color: #EAFBFF;
+}
+
 
 .panel-botones {
     display: flex;
@@ -540,6 +571,7 @@ body {
     height: 40px;
     overflow: hidden;
     border-radius: 50%;
+    margin-right: 12px;
     flex-shrink: 0; /* Evita que el avatar se encoja */
 }
 
