--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -320,18 +320,21 @@ input[readonly] {
 .botonesArriba {
     font-weight: bold;
     color: white;
-    margin-left: 3em;
-    margin-bottom: 5em;
+    margin: 0 auto;
+    margin-bottom: 3em;
 }
 
 .containerPanel {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .containerCreate {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    align-items: center;
 }
 
 .listaUsers {
