--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -803,7 +803,7 @@ strong {
     transition: color 0.2s ease;
 }
 .panelDeBotones .bi:hover {
-    color: #ffffff;
+    color: #1a1a1a;
     cursor: pointer;
 }
 
@@ -895,6 +895,7 @@ strong {
     background-color: #f8f9fa;
     width: 100%; height:60%;
     padding: 2em;
+    border: .15em solid #1a1a1a;
 }
 
 .botonSubirArchivo
@@ -919,3 +920,56 @@ strong {
     color: #FFFFFF;
 }
 
+
+.editarRespuestaForm
+{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+
+.botonGuardarRespuesta
+{
+
+    text-align: center;
+    padding: .75em;
+    border: #4DBAD9 solid .1em;
+    border-radius: .5em;
+    width: 50%;
+    background-color: #f8f9fa;
+    color: #1A1A1A;
+}
+
+.botonGuardarRespuesta:hover
+{
+    cursor: pointer;
+    background-color: #4DBAD9;
+    text-align: center;
+    padding: .75em;
+    border: #4DBAD9 solid .1em;
+    border-radius: .5em;
+    width: 50%;
+    color: #FFFFFF;
+}
+.botonCancelarRespuesta
+{
+    text-align: center;
+    padding: .75em;
+    border: #e51816 solid .1em;
+    border-radius: .5em;
+    width: 50%;
+    background-color: #f8f9fa;
+    color: #e51816;
+}
+.botonCancelarRespuesta:hover
+{
+    cursor: pointer;
+    background-color: #e51816;
+    text-align: center;
+    padding: .75em;
+    border: #4DBAD9 solid .1em;
+    border-radius: .5em;
+    width: 50%;
+    color: #FFFFFF;
+}
