--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -1013,6 +1013,101 @@ body {
     color: #FFFFFF;
 }
 
+#notificationsDropdown {
+    position: absolute;
+    background-color: white;
+    color: black;
+    min-width: 300px; /* Aumentado de 200px a 300px */
+    max-height: 400px; /* Añadido para limitar la altura */
+    overflow-y: auto; /* Permite scroll si hay muchas notificaciones */
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0; /* Alinea el dropdown a la derecha del icono de la campana */
+    top: 100%; /* Lo coloca justo debajo del icono */
+    border-radius: 10px; /* Añadido para redondear los bordes del contenedor principal */
+}
+
+#notificationsDropdown .notificacion-form {
+    padding: 12px 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+#notificationsDropdown .notificacion-item {
+    display: block;
+    width: 100%;
+    text-align: left;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 12px 16px; /* Aumentado el padding para dar más espacio */
+    border-radius: 8px; /* Añadido para redondear los bordes de cada item */
+    margin-bottom: 4px; /* Añadido para dar un poco de espacio entre items */
+    transition: background-color 0.3s ease; /* Suaviza la transición del hover */
+}
+
+#notificationsDropdown .notificacion-item:hover {
+    background-color: #4DBAD9;
+    color: white; /* Cambia el color del texto al hacer hover */
+}
+
+#notificationsDropdown a {
+    color: #333;
+    text-decoration: none;
+}
+
+/* Estilo para el último item para evitar el borde inferior en el último elemento */
+#notificationsDropdown .notificacion-item:last-child {
+    border-bottom: none;
+}
+
+
+/* Estilo para el botón "Marcar todas como leídas" */
+#marcarTodasLeidasBtn {
+    display: block;
+    width: 100%;
+    padding: 12px 16px;
+    background-color: #f9f9f9;
+    color: black;
+    text-align: center;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#marcarTodasLeidasBtn:hover {
+    background-color: #4DBAD9;
+}
+
+#marcarTodasLeidasBtn:active {
+    background-color: #4DBAD9;
+}
+.temas-titulo {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 100%;
+    color: black;
+}
+.bell-container {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.notification-badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 5px;
+    font-size: 0.4em;
+    font-weight: bold;
+}
 
 .editarRespuestaForm
 {
