--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -1123,7 +1123,7 @@ body {
     position: absolute;
     top: -5px;
     right: -5px;
-    background-color: red;
+    background-color: #e51816;
     color: white;
     border-radius: 50%;
     padding: 2px 5px;
