--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -352,13 +352,13 @@ input[readonly] {
     font-weight: bold;
     color: white;
     margin: 0 auto;
-    padding-bottom: 3em;
 }
 
 .botonesArriba {
     font-weight: bold;
     color: white;
     margin: 0 auto;
+    padding-bottom: 2em;
 }
 
 .botonesArriba a {
@@ -370,6 +370,7 @@ input[readonly] {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100vh;
     padding: 2em;
 }
 
@@ -378,6 +379,10 @@ input[readonly] {
     flex-direction: row;
     width: 100%;
     align-items: center;
+}
+
+.listaUsers {
+    overflow-y: scroll;
 }
 
 .listaUsers li {
