--- a/Proyecto/assets/css/style.css
+++ b/Proyecto/assets/css/style.css
@@ -1070,7 +1070,14 @@ input[readonly] {
     position: relative;
     padding-bottom: 50px;
 }
-
+.contenedorRespuestaDivididorRemove
+{
+    background-color: var(--color-principal);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    position: relative;
+}
 .fotoUsuarioPregunta, .fotoUsuarioRespuesta {
     float: left;
     margin-right: 15px;
